# picpay-case-danilo-mello

./: .dockerignore  .gitignore  Dockerfile_bckup.txt  Makefile  docker-compose.yaml  pyproject.toml  test_model_configuration.py  test_predict.py
docker/: Dockerfile
models/lr_model_pyspark/metadata/: .part-00000.crc  part-00000
notebook/: NB_DaniloMello.ipynb  model_params.pkl  wind_speed_pandas.csv
notebook/.ipynb_checkpoints/: NB_DaniloMello-checkpoint.ipynb  Spark DataFrames Project Exercise-checkpoint.ipynb
notebook/airport_coordinates.csv/: .part-00000-c94c565c-bddf-4020-8bda-b1e34fb29a8b-c000.csv.crc  .part-00001-c94c565c-bddf-4020-8bda-b1e34fb29a8b-c000.csv.crc  part-00000-c94c565c-bddf-4020-8bda-b1e34fb29a8b-c000.csv  part-00001-c94c565c-bddf-4020-8bda-b1e34fb29a8b-c000.csv
notebook/airport_data_with_id.csv/: .part-00000-f387c2f2-a3d6-4c8b-91b6-82f16099f587-c000.csv.crc  part-00000-f387c2f2-a3d6-4c8b-91b6-82f16099f587-c000.csv
notebook/airports-database/__MACOSX/: ._airports-database.csv
notebook/df_final.csv/: .part-00000-502fb095-68be-43d8-840b-7c17c8522f12-c000.csv.crc  .part-00001-502fb095-68be-43d8-840b-7c17c8522f12-c000.csv.crc  part-00000-502fb095-68be-43d8-840b-7c17c8522f12-c000.csv  part-00001-502fb095-68be-43d8-840b-7c17c8522f12-c000.csv
notebook/models/: lr_model.pkl
notebook/wind_speed.csv/: .part-00000-aa18c1e9-e85c-4215-b91f-dc2f3a7a9629-c000.csv.crc  part-00000-aa18c1e9-e85c-4215-b91f-dc2f3a7a9629-c000.csv
picpay_env/: pyvenv.cfg
src/: Makefile  docker-compose.yaml  main.py  pyproject.toml
src/.ipynb_checkpoints/: main-checkpoint.py
src/docker/: Dockerfile
src/docker/scripts/: startup-script.sh
src/model/: lr_model.pkl
tests/: test_model_configuration.py  test_predict.py
(+32 files in other folders)
