[tool.poetry]
name = "picpay"
version = "0.1.0"
description = ""
authors = ["danbmello <danbmello@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-core = "2.23.4"
py4j = "0.10.9.7"
annotated-types = "^0.7.0"
anyio = "^4.6.2.post1"
asttokens = "^2.4.1"
certifi = "^2024.8.30"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
comm = "^0.2.2"
contourpy = "^1.3.0"
cycler = "^0.12.1"
debugpy = "^1.8.7"
decorator = "^5.1.1"
executing = "^2.1.0"
fastapi = "^0.115.2"
findspark = "^2.0.1"
fonttools = "^4.54.1"
httpx = "^0.24.0"
h11 = "^0.14.0"
idna = "^3.10"
iniconfig = "^2.0.0"
ipykernel = "^6.29.5"
ipython = "^8.28.0"
jedi = "^0.19.1"
joblib = "^1.4.2"
jupyter-client = "^8.6.3"
jupyter-core = "^5.7.2"
kiwisolver = "^1.4.7"
matplotlib = "^3.9.2"
matplotlib-inline = "^0.1.7"
mongomock = "^4.2.0.post1"
nest-asyncio = "^1.6.0"
numpy = "^2.1.2"
packaging = "^24.1"
pandas = "^2.2.3"
parso = "^0.8.4"
pexpect = "^4.9.0"
pillow = "^10.4.0"
platformdirs = "^4.3.6"
pluggy = "^1.5.0"
prompt-toolkit = "^3.0.48"
psutil = "^6.0.0"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pygments = "^2.18.0"
pyparsing = "^3.2.0"
pytest = "^8.3.3"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"
pyzmq = "^26.2.0"
requests = "^2.32.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
sentinels = "^1.0.0"
setuptools = "^75.1.0"
six = "^1.16.0"
sniffio = "^1.3.1"
stack-data = "^0.6.3"
starlette = "^0.39.2"
threadpoolctl = "^3.5.0"
tornado = "^6.4.1"
traitlets = "^5.14.3"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
urllib3 = "^2.2.3"
uvicorn = "^0.31.1"
wcwidth = "^0.2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
